--- a/auctions/templates/auctions/register.html
+++ b/auctions/templates/auctions/register.html
@@ -22,6 +22,9 @@
         <div class="form-group">
             <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
         </div>
+        <div class="form-group">
+            <input class="form-control" type="date" name="birthday" placeholder="Date of Birth">
+        </div>
         <input class="btn btn-primary" type="submit" value="Register">
     </form>
 
