--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -3,5 +3,10 @@
 {% block body %}
     <h2>Active Listings</h2>
 
-    TODO
+    <ul>
+        {% for listing in listings %}
+            <li>{{ listing.title }} - {{ listing.description }}</li>
+        {% endfor %}
+    </ul>
+
 {% endblock %}
