--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -22,7 +22,7 @@
                                 {{ listing.description }}
                             </p>
                             <p>
-                                <b>Current price: USD {{ listing.starting_bid }}</b>
+                                <b>Current price: USD {{ listing.current_price }}</b>
                             </p>
                         </div>
                     </div>
