--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -4,30 +4,32 @@
     <h2>Active Listings</h2>
 
         {% for listing in listings %}
-            <div class="card text card-custom mb-4">
-                <div class="row no-gutters">
-                    
-                    <div class="col-md-4">
-                        <a href="{% url 'listing' listing.id %}">
-                           <img class="card-img" src="{{ listing.image_url }}" alt="No image.">
-                        </a>
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <a href="{% url 'listing' listing.id %}"><h5 class="card-title">{{ listing.title }}</h5></a>
-                            <p class="card-text">
-                                <small class="text-muted">Published by: {{ listing.username }}</small>
-                            </p>
-                            <p class="card-text card-description">
-                                {{ listing.description }}
-                            </p>
-                            <p>
-                                <b>Current price: USD {{ listing.current_price }}</b>
-                            </p>
+            {% if not listing.is_closed %}
+                <div class="card text card-custom mb-4">
+                    <div class="row no-gutters">
+                        
+                        <div class="col-md-4">
+                            <a href="{% url 'listing' listing.id %}">
+                            <img class="card-img" src="{{ listing.image_url }}" alt="No image.">
+                            </a>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <a href="{% url 'listing' listing.id %}"><h5 class="card-title">{{ listing.title }}</h5></a>
+                                <p class="card-text">
+                                    <small class="text-muted">Published by: {{ listing.username }}</small>
+                                </p>
+                                <p class="card-text card-description">
+                                    {{ listing.description }}
+                                </p>
+                                <p>
+                                    <b>Current price: USD {{ listing.current_price }}</b>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            {% endif %}
         {% endfor %}
 
 
